[tool.poetry]
name = "lattice_llm"
version = "0.1.2"
description = "A library for building LLM agents as Graphs"
authors = ["Josh Carver"]
readme = "README.md"
packages = [{include = "lattice_llm"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "*"
boto3-stubs = {extras = ["bedrock", "bedrock-runtime", "essential"], version = "^1.35.13.post1"}
pydantic = "^2.9.0"

# Extras
streamlit = { version = "^1.38.0", optional = true }
streamlit-flow-component =  { version = "^1.2.9", optional = true }
ollama = { version = "^0.3.3", optional = true }
suno-bark = {git = "https://github.com/suno-ai/bark.git"}
sounddevice = "^0.5.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[tool.poetry.extras]
streamlit = ["streamlit", "streamlit-flow-component"]
ollama = ["ollama"]

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]